// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetadataSection renders status without a description and omits network when chainId is missing 1`] = `
<div>
  <div
    data-testid="section"
  >
    <div
      data-label="status"
      data-testid="row"
    >
      <span
        data-testid="transaction-status"
      >
        pending
      </span>
    </div>
    <div
      data-label="date"
      data-testid="row"
    >
      formatted-date
    </div>
    <div
      data-label="account"
      data-testid="row"
    >
      <span
        data-testid="account-name"
      >
        0xabc
      </span>
    </div>
    <div
      data-label="transactionIdLabel"
      data-testid="row"
    />
  </div>
</div>
`;

exports[`MetadataSection renders the network row when chainId is present 1`] = `
<div>
  <div
    data-testid="section"
  >
    <div
      data-label="status"
      data-testid="row"
    >
      <span
        data-testid="transaction-status"
      >
        success
      </span>
    </div>
    <div
      data-label="date"
      data-testid="row"
    >
      formatted-date
    </div>
    <div
      data-label="from"
      data-testid="row"
    >
      <span
        data-testid="account-name"
      >
        0xabc
      </span>
    </div>
    <div
      data-label="to"
      data-testid="row"
    >
      <span
        data-testid="account-name"
      >
        0xdef
      </span>
    </div>
    <div
      data-label="network"
      data-testid="row"
    >
      <span
        data-testid="network-name"
      >
        eip155:1
      </span>
    </div>
    <div
      data-label="transactionIdLabel"
      data-testid="row"
    />
  </div>
</div>
`;

exports[`TokensSection renders labeled token rows 1`] = `
<div>
  <div
    class="flex flex-col gap-2 pb-4"
  >
    <div>
      <p
        class="text-alternative mb-1"
      >
        You get
      </p>
      <div
        data-testid="token-row"
      >
        ETH
      </div>
    </div>
  </div>
</div>
`;
